installer/kfserving/kustomize/overlay/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: kfserving-models-web-app
  namespace: kfserving-system
spec:
  http:
    - match:
        - headers:
            ':authority':
              regex: kfserving.*
      route:
        - destination:
            host: kfserving-models-web-app.kfserving-system.svc.cluster.local
            port:
              number: 80
